{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 182,
  "lineage": "fd889383-6326-d284-6d5f-a063ee0ef52e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:security-group/sg-06763a2ad1a9ea546",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06763a2ad1a9ea546",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "118320467932",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040107820ca99496c",
            "arn": "arn:aws:ec2:us-east-2:118320467932:elastic-ip/eipalloc-040107820ca99496c",
            "association_id": "eipassoc-07480c68318ddbf3b",
            "domain": "vpc",
            "id": "eipalloc-040107820ca99496c",
            "instance": "i-0844a764b67575212",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09e57a07a5a7f7ee8",
            "private_dns": "ip-10-0-12-142.us-east-2.compute.internal",
            "private_ip": "10.0.12.142",
            "public_dns": "ec2-3-149-119-18.us-east-2.compute.amazonaws.com",
            "public_ip": "3.149.119.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion_eip"
            },
            "tags_all": {
              "Name": "bastion_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.sample-ec2-bastion",
            "aws_security_group.sample-sg-bastion",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7cde895056d21c0",
            "arn": "arn:aws:ec2:us-east-2:118320467932:elastic-ip/eipalloc-0d7cde895056d21c0",
            "association_id": "eipassoc-05fa6cfa9a501ffb9",
            "domain": "vpc",
            "id": "eipalloc-0d7cde895056d21c0",
            "instance": "i-00519fa27edec702c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06ea8b65bf264481c",
            "private_dns": "ip-10-0-8-15.us-east-2.compute.internal",
            "private_ip": "10.0.8.15",
            "public_dns": "ec2-18-217-47-222.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.47.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins_eip"
            },
            "tags_all": {
              "Name": "jenkins_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jenkins_server",
            "aws_security_group.sample-sg-jenkins",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef7d1160815b4b72",
            "arn": "arn:aws:ec2:us-east-2:118320467932:elastic-ip/eipalloc-0ef7d1160815b4b72",
            "association_id": "eipassoc-0c9d67fdb42861e57",
            "domain": "vpc",
            "id": "eipalloc-0ef7d1160815b4b72",
            "network_border_group": "us-east-2",
            "network_interface": "eni-062d651e5829ed7c6",
            "private_dns": "ip-10-0-11-227.us-east-2.compute.internal",
            "private_ip": "10.0.11.227",
            "public_dns": "ec2-18-220-76-66.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.76.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b35f82ee01f0fa2",
            "arn": "arn:aws:ec2:us-east-2:118320467932:elastic-ip/eipalloc-00b35f82ee01f0fa2",
            "association_id": "eipassoc-0da7b310d9ed79478",
            "domain": "vpc",
            "id": "eipalloc-00b35f82ee01f0fa2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08635621a81858173",
            "private_dns": "ip-10-0-22-186.us-east-2.compute.internal",
            "private_ip": "10.0.22.186",
            "public_dns": "ec2-3-12-9-39.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.9.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3b809fcf2445b6a",
            "arn": "arn:aws:ec2:us-east-2:118320467932:instance/i-00519fa27edec702c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00519fa27edec702c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "matchingbot-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ea8b65bf264481c",
            "private_dns": "ip-10-0-8-15.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.15",
            "public_dns": "ec2-18-217-47-222.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.47.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "jenkins-server-root"
                },
                "tags_all": {
                  "Name": "jenkins-server-root"
                },
                "throughput": 125,
                "volume_id": "vol-03ffca7b6833de3f5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011b87afa8bf56d92",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e21389832951b86"
            ]
          },
          "dependencies": [
            "aws_security_group.sample-sg-jenkins",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3b809fcf2445b6a",
            "arn": "arn:aws:ec2:us-east-2:118320467932:instance/i-0844a764b67575212",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0844a764b67575212",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "matchingbot-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e57a07a5a7f7ee8",
            "private_dns": "ip-10-0-12-142.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.142",
            "public_dns": "ec2-3-149-119-18.us-east-2.compute.amazonaws.com",
            "public_ip": "3.149.119.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "sample-ec2-bastion-root"
                },
                "tags_all": {
                  "Name": "sample-ec2-bastion-root"
                },
                "throughput": 125,
                "volume_id": "vol-00fa6efd95005c068",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011b87afa8bf56d92",
            "tags": {
              "Name": "sample-ec2-bastion"
            },
            "tags_all": {
              "Name": "sample-ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01fc76afc4539b89d",
              "sg-06763a2ad1a9ea546"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.sample-sg-bastion",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:internet-gateway/igw-0a597a263262ce673",
            "id": "igw-0a597a263262ce673",
            "owner_id": "118320467932",
            "tags": {
              "Name": "sample-igw"
            },
            "tags_all": {
              "Name": "sample-igw"
            },
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sample-ngw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef7d1160815b4b72",
            "association_id": "eipassoc-0c9d67fdb42861e57",
            "connectivity_type": "public",
            "id": "nat-0936e357c3591b909",
            "network_interface_id": "eni-062d651e5829ed7c6",
            "private_ip": "10.0.11.227",
            "public_ip": "18.220.76.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-011b87afa8bf56d92",
            "tags": {
              "Name": "sample-ngw-01"
            },
            "tags_all": {
              "Name": "sample-ngw-01"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip01",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sample-ngw-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b35f82ee01f0fa2",
            "association_id": "eipassoc-0da7b310d9ed79478",
            "connectivity_type": "public",
            "id": "nat-02958d158ebf4a3bb",
            "network_interface_id": "eni-08635621a81858173",
            "private_ip": "10.0.22.186",
            "public_ip": "3.12.9.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09513372a05cb66d0",
            "tags": {
              "Name": "sample-ngw-02"
            },
            "tags_all": {
              "Name": "sample-ngw-02"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip02",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample-pulic-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a597a263262ce673",
            "id": "r-rtb-0bb0c0565dbeb61401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb0c0565dbeb6140",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sample-igw",
            "aws_route_table.sample-rt-public",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample_private-route01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c10b7a3c317f00181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0936e357c3591b909",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c10b7a3c317f0018",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-ip01",
            "aws_nat_gateway.sample-ngw-01",
            "aws_route_table.sample-rt-private01",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample_private-route02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-015bc298d74d3d2171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02958d158ebf4a3bb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015bc298d74d3d217",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-ip02",
            "aws_nat_gateway.sample-ngw-02",
            "aws_route_table.sample-rt-private02",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:route-table/rtb-0c10b7a3c317f0018",
            "id": "rtb-0c10b7a3c317f0018",
            "owner_id": "118320467932",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0936e357c3591b909",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rt-private01"
            },
            "tags_all": {
              "Name": "sample-rt-private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:route-table/rtb-015bc298d74d3d217",
            "id": "rtb-015bc298d74d3d217",
            "owner_id": "118320467932",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02958d158ebf4a3bb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rt-private02"
            },
            "tags_all": {
              "Name": "sample-rt-private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:route-table/rtb-0bb0c0565dbeb6140",
            "id": "rtb-0bb0c0565dbeb6140",
            "owner_id": "118320467932",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a597a263262ce673",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rt-public"
            },
            "tags_all": {
              "Name": "sample-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075fc5d5e14e41d58",
            "route_table_id": "rtb-0c10b7a3c317f0018",
            "subnet_id": "subnet-0f8ca226cc1292f21"
          },
          "dependencies": [
            "aws_route_table.sample-rt-private01",
            "aws_subnet.sample-subnet-private01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057a9ce812a42498f",
            "route_table_id": "rtb-015bc298d74d3d217",
            "subnet_id": "subnet-0818dfb9b0fc97471"
          },
          "dependencies": [
            "aws_route_table.sample-rt-private02",
            "aws_subnet.sample-subnet-private02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040b2c518c59a862f",
            "route_table_id": "rtb-0bb0c0565dbeb6140",
            "subnet_id": "subnet-011b87afa8bf56d92"
          },
          "dependencies": [
            "aws_route_table.sample-rt-public",
            "aws_subnet.sample-subnet-public01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1f61adb130c7603",
            "route_table_id": "rtb-0bb0c0565dbeb6140",
            "subnet_id": "subnet-09513372a05cb66d0"
          },
          "dependencies": [
            "aws_route_table.sample-rt-public",
            "aws_subnet.sample-subnet-public02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:security-group/sg-01fc76afc4539b89d",
            "description": "for bastion Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Bastion to communicate with EKS API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fc76afc4539b89d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS API Server to accept traffic from Bastion",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "sample-sg-bastion",
            "name_prefix": "",
            "owner_id": "118320467932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-bastion"
            },
            "tags_all": {
              "Name": "sample-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:security-group/sg-06cd4e46a403b2463",
            "description": "Security Group for DB Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cd4e46a403b2463",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sample-sg-db",
            "name_prefix": "",
            "owner_id": "118320467932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-db"
            },
            "tags_all": {
              "Name": "sample-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:security-group/sg-0d90cffe3a6ca594e",
            "description": "for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d90cffe3a6ca594e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-sg-elb",
            "name_prefix": "",
            "owner_id": "118320467932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-elb"
            },
            "tags_all": {
              "Name": "sample-sg-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:security-group/sg-02e21389832951b86",
            "description": "Security Group for Jenkins Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e21389832951b86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-sg-jenkins",
            "name_prefix": "",
            "owner_id": "118320467932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-jenkins"
            },
            "tags_all": {
              "Name": "sample-sg-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-bastion-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for all outbound",
            "from_port": 0,
            "id": "sgrule-3091458828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01fc76afc4539b89d",
            "security_group_rule_id": "sgr-021b56e64dfe85093",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-bastion-eks-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Bastion to communicate with EKS API Server",
            "from_port": 443,
            "id": "sgrule-2682658380",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01fc76afc4539b89d",
            "security_group_rule_id": "sgr-0cdf71ce437fc9693",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-eks-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS API Server to accept traffic from Bastion",
            "from_port": 443,
            "id": "sgrule-3914966783",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01fc76afc4539b89d",
            "security_group_rule_id": "sgr-04a3628599e0b900f",
            "self": false,
            "source_security_group_id": "sg-01fc76afc4539b89d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all",
            "from_port": 0,
            "id": "sgrule-1927288526",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d90cffe3a6ca594e",
            "security_group_rule_id": "sgr-08068705d6bde7cad",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all http",
            "from_port": 80,
            "id": "sgrule-95883495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d90cffe3a6ca594e",
            "security_group_rule_id": "sgr-018abcf04482e2995",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample_sg-bastion-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-2990196027",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01fc76afc4539b89d",
            "security_group_rule_id": "sgr-0c88b09c61f4d98b7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-bastion",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:subnet/subnet-0f8ca226cc1292f21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8ca226cc1292f21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118320467932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-private01"
            },
            "tags_all": {
              "Name": "sample-subnet-private01"
            },
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:subnet/subnet-0818dfb9b0fc97471",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818dfb9b0fc97471",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "118320467932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-private02"
            },
            "tags_all": {
              "Name": "sample-subnet-private02"
            },
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:subnet/subnet-011b87afa8bf56d92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011b87afa8bf56d92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118320467932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public01"
            },
            "tags_all": {
              "Name": "sample-subnet-public01"
            },
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:subnet/subnet-09513372a05cb66d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09513372a05cb66d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118320467932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public02"
            },
            "tags_all": {
              "Name": "sample-subnet-public02"
            },
            "vpc_id": "vpc-0bbe8235071a0a023"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:118320467932:vpc/vpc-0bbe8235071a0a023",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ede1b4a3fca7482",
            "default_route_table_id": "rtb-07a32667ac7de9076",
            "default_security_group_id": "sg-06763a2ad1a9ea546",
            "dhcp_options_id": "dopt-0c129ff4ffba4d202",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbe8235071a0a023",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a32667ac7de9076",
            "owner_id": "118320467932",
            "tags": {
              "Name": "sample-vpc"
            },
            "tags_all": {
              "Name": "sample-vpc"
            }
          }
        }
      ]
    }
  ]
}